--- a/2025v1.1
+++ b/2025v1.1
@@ -3701,7 +3701,7 @@
                     "hexColor": "#A6192E"
                 },
                 {
-                    "name": "UNLV Runnin' Rebels",
+                    "name": "UNLV Runnin Rebels",
                     "state": "Nevada",
                     "abbreviation": "UNLV",
                     "rival": [
@@ -3742,26 +3742,30 @@
                     "hexColor": "#1E4D2B"
                 },
                 {
-                    "name": "Toledo",
-                    "state": "Ohio",
-                    "abbreviation": "TOL",
+                    "name": "Cal Bears",
+                    "state": "California",
+                    "abbreviation": "CAL",
                     "rival": [
-                        "CMU"
+                        "STAN"
                     ],
-                    "rivalryNames": {},
-                    "prestige": "73",
-                    "hexColor": "#15397F"
+                    "rivalryNames": {
+                        "STAN": "The Big Game",
+                    },
+                    "prestige": "68",
+                    "hexColor": "#003262"
                 },
                 {
-                    "name": "Western Michigan",
-                    "state": "Michigan",
-                    "abbreviation": "WMU",
+                    "name": "Stanford Cardinal",
+                    "state": "California",
+                    "abbreviation": "STAN",
                     "rival": [
-                        "EMU"
+                        "CAL"
                     ],
-                    "rivalryNames": {},
-                    "prestige": "47",
-                    "hexColor": "#6C4023"
+                    "rivalryNames": {
+                        "CAL": "The Big Game",
+                        },
+                    "prestige": "71",
+                    "hexColor": "#8C1515"
                 }
             ]
         },
