--- a/2025v1.1
+++ b/2025v1.1
@@ -3738,7 +3738,7 @@
                         "WYO": "The Stateline Standoff",
                         "CU": "Rocky Mountain Showdown",
                     },
-                    "prestige": "68",
+                    "prestige": "66",
                     "hexColor": "#1E4D2B"
                 },
                 {
@@ -3751,7 +3751,7 @@
                     "rivalryNames": {
                         "STAN": "The Big Game",
                     },
-                    "prestige": "68",
+                    "prestige": "69",
                     "hexColor": "#003262"
                 },
                 {
@@ -3775,124 +3775,116 @@
             "confName": "AAC",
             "confTeams": [
                 {
-                    "name": "Army",
-                    "state": "New York",
-                    "abbreviation": "ARMY",
+                    "name": "Florida Atlantic Owls",
+                    "state": "Florida",
+                    "abbreviation": "FAU",
                     "rival": [
-                        "NAVY",
-                        "AIRF"
-                    ],
-                    "rivalryNames": {
-                        "NAVY": "Army-Navy Game"
-                    },
-                    "prestige": "45",
-                    "hexColor": "#D4BF91"
-                },
-                {
-                    "name": "Air Force",
-                    "state": "Colorado",
-                    "abbreviation": "AIRF",
-                    "rival": [
-                        "ARMY",
-                        "NAVY"
+                        "FIU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "64",
+                    "prestige": "52",
+                    "hexColor": "#003366"
+                },
+                {
+                    "name": "Florida International Panthers",
+                    "state": "Florida",
+                    "abbreviation": "FIU",
+                    "rival": [
+                        "FAU"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "38",
+                    "hexColor": "#081E3F"
+                },
+                {
+                    "name": "East Carolina Pirates",
+                    "state": "North Carolina",
+                    "abbreviation": "ECU",
+                    "rival": [
+                        "CCU"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "40",
+                    "hexColor": "#592A8A"
+                },
+                {
+                    "name": "Memphis Tigers",
+                    "state": "Tennessee",
+                    "abbreviation": "MEM",
+                    "rival": [
+                        "CIN",
+                        "MTSU"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "66",
                     "hexColor": "#003087"
                 },
                 {
-                    "name": "Georgia Tech",
-                    "state": "Georgia",
-                    "abbreviation": "GT",
+                    "name": "Middle Tennessee Blue Raiders",
+                    "state": "Tennessee",
+                    "abbreviation": "MTSU",
                     "rival": [
-                        "UGA",
-                        "SYR"
+                        "MEM"
                     ],
                     "rivalryNames": {},
-                    "prestige": "70",
-                    "hexColor": "#B3A369"
-                },
-                {
-                    "name": "Boston College",
-                    "state": "Massachusetts",
-                    "abbreviation": "BC",
-                    "rival": [
-                        "MARY",
-                        "SYR"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "65",
-                    "hexColor": "#98002E"
-                },
-                {
-                    "name": "Navy",
-                    "state": "Maryland",
-                    "abbreviation": "NAVY",
-                    "rival": [
-                        "ARMY",
-                        "AIRF"
-                    ],
-                    "rivalryNames": {
-                        "ARMY": "Army-Navy Game"
-                    },
                     "prestige": "45",
-                    "hexColor": "#00205B"
+                    "hexColor": "#0066CC"
                 },
                 {
-                    "name": "Syracuse",
-                    "state": "New York",
-                    "abbreviation": "SYR",
+                    "name": "UAB Blazers",
+                    "state": "Alabama",
+                    "abbreviation": "UAB",
                     "rival": [
-                        "GT",
-                        "BC"
+                        "WKU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "80",
-                    "hexColor": "#F76900"
+                    "prestige": "58",
+                    "hexColor": "#006341"
                 },
                 {
-                    "name": "Rutgers",
-                    "state": "New Jersey",
-                    "abbreviation": "RUT",
+                    "name": "Coastal Carolina Chanticleers",
+                    "state": "South Carolina",
+                    "abbreviation": "CCU",
                     "rival": [
-                        "LIB"
+                        "APP",
+                        "ECU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "73",
-                    "hexColor": "#CC0033"
+                    "prestige": "67",
+                    "hexColor": "#006F71"
                 },
                 {
-                    "name": "UMass",
-                    "state": "Massachusettes",
-                    "abbreviation": "MASS",
+                    "name": "Georgia Southern Eagles",
+                    "state": "Georgia",
+                    "abbreviation": "GSOU",
                     "rival": [
-                        "CONN"
+                        "GSU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "20",
-                    "hexColor": "#971B2F"
+                    "prestige": "43",
+                    "hexColor": "#011E41"
                 },
                 {
-                    "name": "UConn",
-                    "state": "Connecticut",
-                    "abbreviation": "CONN",
+                    "name": "Georgia State Panthers",
+                    "state": "Georgia",
+                    "abbreviation": "GSU",
                     "rival": [
-                        "MASS"
+                        "GSOU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "30",
-                    "hexColor": "#000E2F"
+                    "prestige": "48",
+                    "hexColor": "#0039A6"
                 },
                 {
-                    "name": "Liberty",
-                    "state": "Virginia",
-                    "abbreviation": "LIB",
+                    "name": "Western Kentucky Hilltoppers",
+                    "state": "Kentucky",
+                    "abbreviation": "WKU",
                     "rival": [
-                        "RUT"
+                        "UAB"
                     ],
                     "rivalryNames": {},
-                    "prestige": "74",
-                    "hexColor": "#002D62"
+                    "prestige": "55",
+                    "hexColor": "#C60C30"
                 }
             ]
         },
