--- a/2025v1.1
+++ b/2025v1.1
@@ -3228,7 +3228,7 @@
                         "OKLA": "Bedlam",
                         "TLSA": "Bank of Oklahoma Turnpike Classic"
                     },
-                    "prestige": "87",
+                    "prestige": "85",
                     "hexColor": "#FF7300"
                 },
                 {
@@ -3894,114 +3894,125 @@
             "confName": "CUSA",
             "confTeams": [
                 {
-                    "name": "Florida Atlantic",
-                    "state": "Florida",
-                    "abbreviation": "FAU",
+                    "name": "Army",
+                    "state": "New York",
+                    "abbreviation": "ARMY",
                     "rival": [
-                        "FIU"
+                        "NAVY",
+                        "AIRF"
                     ],
-                    "rivalryNames": {},
-                    "prestige": "52",
-                    "hexColor": "#003366"
+                    "rivalryNames": {
+                        "NAVY": "Army-Navy Game"
+                    },
+                    "prestige": "45",
+                    "hexColor": "#D4BF91"
                 },
                 {
-                    "name": "Florida International",
-                    "state": "Florida",
-                    "abbreviation": "FIU",
+                    "name": "UMass",
+                    "state": "Massachusetts",
+                    "abbreviation": "MASS",
                     "rival": [
-                        "FAU"
+                        "BUFF"
                     ],
                     "rivalryNames": {},
-                    "prestige": "38",
-                    "hexColor": "#081E3F"
+                    "prestige": "51",
+                    "hexColor": "#971B2F"
                 },
                 {
-                    "name": "LA Tech",
-                    "state": "Louisiana",
-                    "abbreviation": "LTEC",
+                    "name": "Buffalo",
+                    "state": "New York",
+                    "abbreviation": "BUFF",
                     "rival": [
-                        "MTSU"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "30",
-                    "hexColor": "#002F8B"
-                },
-                {
-                    "name": "Middle Tennessee",
-                    "state": "Tennessee",
-                    "abbreviation": "MTSU",
-                    "rival": [
-                        "LTEC"
+                        "MASS"
                     ],
                     "rivalryNames": {},
                     "prestige": "45",
-                    "hexColor": "#0066CC"
+                    "hexColor": "#005BBB"
                 },
                 {
-                    "name": "UAB",
-                    "state": "Alabama",
-                    "abbreviation": "UAB",
+                    "name": "Illinois State",
+                    "state": "Illinois",
+                    "abbreviation": "ILST",
                     "rival": [
-                        "WKU"
+                        "TOL"
                     ],
                     "rivalryNames": {},
-                    "prestige": "58",
-                    "hexColor": "#006341"
+                    "prestige": "50",
+                    "hexColor": "#CE1126"
                 },
                 {
-                    "name": "UTSA",
-                    "state": "Texas",
-                    "abbreviation": "UTSA",
+                    "name": "Navy",
+                    "state": "Maryland",
+                    "abbreviation": "NAVY",
                     "rival": [
-                        "UTEP"
+                        "ARMY",
+                        "AIRF"
                     ],
-                    "rivalryNames": {},
-                    "prestige": "68",
-                    "hexColor": "#F15A22"
-                },
-                {
-                    "name": "UTEP",
-                    "state": "Texas",
-                    "abbreviation": "UTEP",
-                    "rival": [
-                        "UTSA"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "37",
-                    "hexColor": "#FF8200"
-                },
-                {
-                    "name": "North Texas",
-                    "state": "Texas",
-                    "abbreviation": "UNT",
-                    "rival": [
-                        "RICE"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "40",
-                    "hexColor": "#00853E"
-                },
-                {
-                    "name": "Rice",
-                    "state": "Texas",
-                    "abbreviation": "RICE",
-                    "rival": [
-                        "UNT"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "35",
+                    "rivalryNames": {
+                        "ARMY": "Army-Navy Game"
+                    },
+                    "prestige": "45",
                     "hexColor": "#00205B"
                 },
                 {
-                    "name": "Western Kentucky",
-                    "state": "Kentucky",
-                    "abbreviation": "WKU",
+                    "name": "Miami OH",
+                    "state": "Ohio",
+                    "abbreviation": "MIOH",
                     "rival": [
-                        "UAB"
+                        "OHIO"
                     ],
                     "rivalryNames": {},
-                    "prestige": "65",
-                    "hexColor": "#C60C30"
+                    "prestige": "60",
+                    "hexColor": "#B61E2E"
+                },
+                {
+                    "name": "Ohio",
+                    "state": "Ohio",
+                    "abbreviation": "OHIO",
+                    "rival": [
+                        "MIOH",
+                        "TOL"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "52",
+                    "hexColor": "#00694E"
+                },
+                {
+                    "name": "Toledo",
+                    "state": "Ohio",
+                    "abbreviation": "TOL",
+                    "rival": [
+                        "OHIO",
+                        "ILST"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "55",
+                    "hexColor": "#15397F"
+                },
+                {
+                    "name": "Marshall",
+                    "state": "West Virginia",
+                    "abbreviation": "MARS",
+                    "rival": [
+                        "WVU",
+                        "LIB"
+                    ],
+                    "rivalryNames": {
+                        "WVU": "Friends of Coal Bowl"
+                    },
+                    "prestige": "35",
+                    "hexColor": "#00B140"
+                },
+                {
+                    "name": "Liberty",
+                    "state": "Virginia",
+                    "abbreviation": "LIB",
+                    "rival": [
+                        "MARS"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "69",
+                    "hexColor": "#002D62"
                 }
             ]
         },
