--- a/2025v1.1
+++ b/2025v1.1
@@ -3894,7 +3894,7 @@
             "confName": "CUSA",
             "confTeams": [
                 {
-                    "name": "Army",
+                    "name": "Army Black Knights",
                     "state": "New York",
                     "abbreviation": "ARMY",
                     "rival": [
@@ -3908,7 +3908,7 @@
                     "hexColor": "#D4BF91"
                 },
                 {
-                    "name": "UMass",
+                    "name": "UMass Minutemen",
                     "state": "Massachusetts",
                     "abbreviation": "MASS",
                     "rival": [
@@ -3919,7 +3919,7 @@
                     "hexColor": "#971B2F"
                 },
                 {
-                    "name": "Buffalo",
+                    "name": "Buffalo Bulls",
                     "state": "New York",
                     "abbreviation": "BUFF",
                     "rival": [
@@ -3930,7 +3930,7 @@
                     "hexColor": "#005BBB"
                 },
                 {
-                    "name": "Illinois State",
+                    "name": "Illinois State Cardinals",
                     "state": "Illinois",
                     "abbreviation": "ILST",
                     "rival": [
@@ -3941,7 +3941,7 @@
                     "hexColor": "#CE1126"
                 },
                 {
-                    "name": "Navy",
+                    "name": "Navy Midshipmen",
                     "state": "Maryland",
                     "abbreviation": "NAVY",
                     "rival": [
@@ -3955,7 +3955,7 @@
                     "hexColor": "#00205B"
                 },
                 {
-                    "name": "Miami OH",
+                    "name": "Miami Redhawks",
                     "state": "Ohio",
                     "abbreviation": "MIOH",
                     "rival": [
@@ -3966,7 +3966,7 @@
                     "hexColor": "#B61E2E"
                 },
                 {
-                    "name": "Ohio",
+                    "name": "Ohio Bobcats",
                     "state": "Ohio",
                     "abbreviation": "OHIO",
                     "rival": [
@@ -3978,7 +3978,7 @@
                     "hexColor": "#00694E"
                 },
                 {
-                    "name": "Toledo",
+                    "name": "Toledo Rockets",
                     "state": "Ohio",
                     "abbreviation": "TOL",
                     "rival": [
@@ -3990,7 +3990,7 @@
                     "hexColor": "#15397F"
                 },
                 {
-                    "name": "Marshall",
+                    "name": "Marshall Thundering Herd",
                     "state": "West Virginia",
                     "abbreviation": "MARS",
                     "rival": [
@@ -4004,7 +4004,7 @@
                     "hexColor": "#00B140"
                 },
                 {
-                    "name": "Liberty",
+                    "name": "Liberty Flames",
                     "state": "Virginia",
                     "abbreviation": "LIB",
                     "rival": [
