--- a/2025v1.1
+++ b/2025v1.1
@@ -4018,26 +4018,27 @@
         },
         {
             "confFullName": "Mountain West",
-            "confPrestige": "70",
+            "confPrestige": "60",
             "confName": "MWC",
             "confTeams": [
                 {
-                    "name": "Boise State",
-                    "state": "Idaho",
-                    "abbreviation": "BSU",
+                    "name": "UTEP",
+                    "state": "Texas",
+                    "abbreviation": "UTEP",
                     "rival": [
-                        "FRES"
+                        "NM",
+                        "NMSU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "68",
-                    "hexColor": "#D64309"
+                    "prestige": "54",
+                    "hexColor": "#FF8200"
                 },
                 {
                     "name": "Fresno State",
                     "state": "California",
                     "abbreviation": "FRES",
                     "rival": [
-                        "BSU"
+                        "SJSU"
                     ],
                     "rivalryNames": {},
                     "prestige": "70",
@@ -4059,43 +4060,47 @@
                     "state": "Nevada",
                     "abbreviation": "NEV",
                     "rival": [
-                        "UNLV"
+                        "UNLV",
+                        "MONT"
                     ],
                     "rivalryNames": {},
-                    "prestige": "27",
+                    "prestige": "36",
                     "hexColor": "#003366"
                 },
                 {
-                    "name": "San Diego State",
-                    "state": "California",
-                    "abbreviation": "SDSU",
+                    "name": "Air Force",
+                    "state": "Colorado",
+                    "abbreviation": "AIRF",
                     "rival": [
-                        "SJSU"
+                        "ARMY",
+                        "NAVY"
                     ],
                     "rivalryNames": {},
-                    "prestige": "45",
-                    "hexColor": "#A6192E"
+                    "prestige": "64",
+                    "hexColor": "#003087"
                 },
                 {
                     "name": "San Jose State",
                     "state": "California",
                     "abbreviation": "SJSU",
                     "rival": [
-                        "SDSU"
+                        "MONT",
+                        "FRES"
                     ],
                     "rivalryNames": {},
-                    "prestige": "57",
+                    "prestige": "45",
                     "hexColor": "#0055A2"
                 },
                 {
-                    "name": "UNLV",
-                    "state": "Nevada",
-                    "abbreviation": "UNLV",
+                    "name": "New Mexico State",
+                    "state": "New Mexico",
+                    "abbreviation": "NMSU",
                     "rival": [
-                        "NEV"
+                        "NM",
+                        "UTEP"
                     ],
                     "rivalryNames": {},
-                    "prestige": "60",
+                    "prestige": "37",
                     "hexColor": "#CF0A2C"
                 },
                 {
@@ -4109,7 +4114,7 @@
                     "rivalryNames": {
                         "UTAH": "Battle of the Brothers"
                     },
-                    "prestige": "35",
+                    "prestige": "48",
                     "hexColor": "#00263A"
                 },
                 {
@@ -4117,22 +4122,24 @@
                     "state": "New Mexico",
                     "abbreviation": "UNM",
                     "rival": [
-                        "WYO"
+                        "NMSU",
+                        "UTEP"
                     ],
                     "rivalryNames": {},
-                    "prestige": "30",
+                    "prestige": "34",
                     "hexColor": "#BA0C2F"
                 },
                 {
-                    "name": "Wyoming",
-                    "state": "Wyoming",
-                    "abbreviation": "WYO",
+                    "name": "Montana",
+                    "state": "Montana",
+                    "abbreviation": "MONT",
                     "rival": [
-                        "UNM"
+                        "SJSU",
+                        "NEV"
                     ],
                     "rivalryNames": {},
-                    "prestige": "58",
-                    "hexColor": "#492F24"
+                    "prestige": "33",
+                    "hexColor": "#660033"
                 }
             ]
         },
